# for display continuity sake please use 2 spaces instead of tabs

* release 1.6.3 ***************************************************************

2013-05-27 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * Add two simple plugins for Sextante raster layers
   * a) RasterLayerPropertiesPlugin which displays raster properties (extension, name, bands, etc), 
        to Sextante Raster Layer Context menu
   * b) RasterQueryPlugIn to inspect pixels on raster layer, to Raster Toolbar menu

2013-05-26 ede
  * main menu Window, put "Clone' before 'Synchronization', as they belong together

2013-05-25 mmichaud <michael.michaud@free.fr>
  * 3613870 fixed : cloning sextante raster layer was creating a unique name
  * 3612322 fixed :  "Create point grid", "Create lattice" and "Raster profile"
    does not throw a NPE on a pasted Sextante Raster Layer any more

2013-05-24 Matthias Scholz <ms@jammerhund.de>
  * AddDatastoreLayerPanel.populateDatasetComboBox():
      avoid a NPE, if there are no spatial enabled tables in this database

2013-05-21 mmichaud <michael.michaud@free.fr>
  * second tentative to fix 3613603

2013-05-20 ede
  * bugfix 3613603: NPE thrown by LayerNamePanel
    https://sourceforge.net/tracker/?func=detail&atid=679906&aid=3613603&group_id=118054
  * minor performance enhancement for LayerNameTree selection

2013-05-20 mmichaud <michael.michaud@free.fr>
  * now, changing active InternalFrame will change activeTaskFrame
    if internalFrame is a TaskFrameProxy (see also FR 3613274)

2013-05-19 mmichaud <michael.michaud@free.fr>
  * add optional 'Apply' button in MultiInputDialog, and use it in 
    DeeChangeStylesPlugIn

2013-05-18 mmichaud <michael.michaud@free.fr>
  * add project name (aka task name) in the ViewAttribute frame title.
  * fix bug 3613234 : sorting attributes did not respect comparator contract
  
2013-05-11 ede
  * carefully reordered main menu View
  * zoomPrevious/NextPlugIn have shortcuts Ctrl+Shift+Y/Z now

2013-05-10 ede