@@ -1,11 +1,15 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2013-06-02 mmichaud <michael.michaud@free.fr>
+  * Fix a bug in Union/Merge plugin and improve it so that it
+    can be up to 2 times faster (avoid computing union 2 times)
+
 * release 1.6.3 ***************************************************************
 
 2013-05-27 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
    * Add two simple plugins for Sextante raster layers
-   * a) RasterLayerPropertiesPlugin which displays raster properties (extension, name, bands, etc), 
-        to Sextante Raster Layer Context menu
+   * a) RasterLayerPropertiesPlugin which displays raster properties (extension,
+        name, bands, etc), to Sextante Raster Layer Context menu
    * b) RasterQueryPlugIn to inspect pixels on raster layer, to Raster Toolbar menu
 
 2013-05-26 ede
